Document Java 21 runtime compatibility issue in MIGRATION_REPORT
XNAT WAR compiles successfully but fails to start at runtime in
Docker/Tomcat due to Spring ContextLoaderListener initialization
failure. Root cause is likely SLF4J 1.7/2.0 provider mismatch and
Spring 5.3/Hibernate 5.6 Java 21 strong encapsulation issues.

This is a known Java 21 migration risk documented in the migration
plan. The build migration is complete; runtime compatibility requires
Spring/Hibernate version upgrades as follow-up work.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>